Ajout paymentsRoutes
