# index.js
@@ -3,6 +3,7 @@ const express = require('express');
 const app = express();
 const port = 3000;
 const clientsRoutes = require('./routes/clientsRoutes');
+const paymentsRoutes = require('./routes/paymentsRoutes');
 const escape_gamesRoutes = require('./routes/escape_gamesRoutes');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
@@ -11,6 +12,7 @@ app.use(express.json());
 
 app.use('/clients', clientsRoutes);
 app.use('/escape_games', escape_gamesRoutes);
+app.use('/payments', paymentsRoutes);
 
 app.get('/', (req, res) => {
   res.send('Bienvenue sur mon API');
